--- a/pywb/templates/banner.html
+++ b/pywb/templates/banner.html
@@ -17,13 +17,33 @@ window.banner_info = {
     locales: {{ locales }},
     locale_prefixes: {{ get_locale_prefixes() | tojson }},
     prefix: "{{ wb_prefix }}",
-    staticPrefix: "{{ static_prefix }}"
+    staticPrefix: "{{ static_prefix }}",
+
+    logo: "{{ ui.logo }}"
 };
 </script>
 
+
+{% if is_framed or not ui.vue_timeline_banner %}
 <!-- default banner, create through js -->
-<script src='{{ static_prefix }}/default_banner.js'> </script>
 <link rel='stylesheet' href='{{ static_prefix }}/default_banner.css'/>
+<script src='{{ static_prefix }}/default_banner.js'> </script>
+
+{% else %}
+
+<link rel='stylesheet' href='{{ static_prefix }}/vue_banner.css'/>
+<script src="{{ static_prefix }}/vue/vueui.js"></script>
+<script>
+  VueUI.main("{{ static_prefix }}", "{{ url }}", "{{ wb_prefix }}", "{{ timestamp }}");
+</script>
+
+{% if ui.vue_timeline_banner %}
+<div id="app" style="width: 100%; height: 200px"></div>
+{% endif %}
+
+
+{% endif %}
+
 
 {% endautoescape %}
 {% endif %}
