--- a/pywb/templates/query.html
+++ b/pywb/templates/query.html
@@ -6,13 +6,24 @@
 
 {% block head %}
 {{ super() }}
+
+{% if not ui.vue_calendar_ui %}
 <link rel="stylesheet" href="{{ static_prefix }}/css/query.css">
 <script src="{{ static_prefix }}/js/url-polyfill.min.js"></script>
 <script src="{{ static_prefix }}/query.js"></script>
+{% else %}
+
+<script src="{{ static_prefix }}/vue/vueui.js"></script>
+
+{% endif %}
+
+
 {% endblock %}
 
 
 {% block body %}
+
+{% if not ui.vue_calendar_ui %}
 <div class="container-fluid">
     <div class="row justify-content-center">
         <h4 class="display-4 text-center text-sm-left p-0">{{ _('Search Results') }}</h4>
@@ -22,6 +33,9 @@
     <div class="row justify-content-center text-center text-sm-left mt-1" id="display-query-type-info"></div>
 </div>
 <div class="container mt-3 q-display" id="captures"></div>
+{% endif %}
+
+
 <script>
   var text = {
       months: {
@@ -55,7 +69,20 @@
       },
     };
 
+{% if not ui.vue_calendar_ui %}
+
   var renderCal = new RenderCalendar({ prefix: "{{ prefix }}", staticPrefix: "{{ static_prefix }}", text: text });
   renderCal.init();
+
+{% else %}
+  VueUI.main("{{ static_prefix }}", "{{ url }}", "{{ prefix }}");
+
+{% endif %}
+
 </script>
+
+{% if ui.vue_calendar_ui %}
+<div id="app" style="width: 100%; height: 100%"></div>
+{% endif %}
+
 {% endblock %}
