docs: add new UI docs: - add ui-overview as UI toc page - refactor ui-customization to top-level customizations page - add template-guide for in-depth template reference - add new-vue-ui page for docs on new ui, with images - fix adding logo to old ui, add to docs

--- a/pywb/templates/banner.html
+++ b/pywb/templates/banner.html
@@ -19,7 +19,7 @@ window.banner_info = {
     prefix: "{{ wb_prefix }}",
     staticPrefix: "{{ static_prefix }}",
 
-    logo: "{{ ui.logo }}"
+    logoImg: "{{ ui.logo }}"
 };
 </script>
 
