ui/templates: fixes based on feedback from @ldko!
templates: add placeholder templates (footer.html, head.html)
templates: allow 'base_html', 'footer_html', 'head_html', 'header_html' to be added via wb-manager 'add-template' cmd
ui: fix logo path, support linking
ui: make url on banner an input field
docs: clarify docs around templates, paths

--- a/pywb/templates/header.html
+++ b/pywb/templates/header.html
@@ -1,3 +1,4 @@
+{# place content to be added at the very beginning of the <body> tag in this file below #}
 <header>
    {% if not err_msg and locales|length > 1 %}
     <div class="language-select">
