--- a/pywb/templates/query.html
+++ b/pywb/templates/query.html
@@ -75,7 +75,7 @@
   renderCal.init();
 
 {% else %}
-  VueUI.main("{{ static_prefix }}", "{{ url }}", "{{ prefix }}");
+  VueUI.main("{{ static_prefix }}", "{{ url }}", "{{ prefix }}", undefined, "{{ ui.logo }}");
 
 {% endif %}
 
