--- a/pywb/templates/banner.html
+++ b/pywb/templates/banner.html
@@ -34,7 +34,7 @@ window.banner_info = {
 <link rel='stylesheet' href='{{ static_prefix }}/vue_banner.css'/>
 <script src="{{ static_prefix }}/vue/vueui.js"></script>
 <script>
-  VueUI.main("{{ static_prefix }}", "{{ url }}", "{{ wb_prefix }}", "{{ timestamp }}");
+  VueUI.main("{{ static_prefix }}", "{{ url }}", "{{ wb_prefix }}", "{{ timestamp }}", "{{ ui.logo }}");
 </script>
 
 {% if ui.vue_timeline_banner %}
