misc vue + i18n fixes: - make calendar tooltips into real links and clickable and ctrl+clickable - ensure advanced view uses old ui (not supported in new ui) - add language popup on frame_insert for vueui - i18n: consolidate loc strings for vueui into vue_loc.html - spinner: for replay, only show over banner - spinner: show after 500ms delay - i18n: add one more string ('no captures') - make calendar popup links regular links to support cmd+click - i18n: implement lang switcher in vue as well (for query and framed_insert), don't include non-vue language switcher in header

--- a/pywb/templates/header.html
+++ b/pywb/templates/header.html
@@ -1,6 +1,6 @@
 {# place content to be added at the very beginning of the <body> tag in this file below #}
 <header>
-   {% if not err_msg and locales|length > 1 %}
+   {% if not err_msg and locales|length > 1 and (not ui or not ui.vue_calendar_ui) %}
     <div class="language-select">
         {{ _('Language:') }}
         <ul role="listbox" aria-activedescendant="{{ env.pywb_lang | default(default_locale) }}" aria-labelledby="{{ _('Language select') }}">
