Rework Vue banner UI
- Make Vue banner responsive with Bootstrap 4
- Add previous/next year arrows to calendar
- Make navbar background, text color, and button outlines configurable
via config.yaml
- Toggle calendar and timeline separately
- Fix bug preventing title from displaying
- Make app keyboard-navigable
- Fix banner background color configuration
- Comment out vue_navbar_background_hash
- Display linear timeline tooltip centrally on enter
- Improve header styling on small screens
- Add titles to font awesome icons
- Remove old default banner (calendar retained for advanced search
  results)
- Fix TimelineLinear TypeError that broke calendar
- Bump version to 2.7.0b2
- Set Cache-Control header on CDXJ API response to mark returned CDX as
stale after 1 day
- Add commented out UI values to config.yaml to aid users
- Remove timeline and calendar card borders
- Fix issues with snapshot navigation
- Center search bar and align with buttons
- Make Vue app bfcache-ineligible: By adding an empty unload event
listener, we make pages serving the Vue app ineligible for bfcache,
which prevents unexpected behavior when navigating via the browser's
back/forward buttons.

--- a/pywb/templates/banner.html
+++ b/pywb/templates/banner.html
@@ -22,23 +22,11 @@ window.banner_info = {
     logoImg: "{{ ui.logo }}"
 };
 </script>
-
-
-{% if is_framed or not ui.vue_timeline_banner %}
-<!-- default banner, create through js -->
-<link rel='stylesheet' href='{{ static_prefix }}/default_banner.css'/>
-<script src='{{ static_prefix }}/default_banner.js'> </script>
-
-{% else %}
-
-{% if ui.vue_timeline_banner %}
 <script src="{{ static_prefix }}/loading-spinner/loading-spinner.js"></script>
-<link rel='stylesheet' href='{{ static_prefix }}/vue_banner.css'/>
 <script src="{{ static_prefix }}/vue/vueui.js"></script>
-{% endif %}
+<link rel="stylesheet" href='{{ static_prefix }}/vue_banner.css'/>
 
-{% endif %}
-
+{% include 'bootstrap_jquery.html' ignore missing %}
 
 {% endautoescape %}
 {% endif %}
