Default to old search results view for advanced search
Use old results view if matchType or filter params are present in query
string.

--- a/pywb/templates/query.html
+++ b/pywb/templates/query.html
@@ -7,8 +7,18 @@
 {% block head %}
 {{ super() }}
 
+{% if "filter=" in env['QUERY_STRING'] or "matchType=" in env['QUERY_STRING'] %}
+
+<link rel="stylesheet" href="{{ static_prefix }}/css/query.css">
+<script src="{{ static_prefix }}/js/url-polyfill.min.js"></script>
+<script src="{{ static_prefix }}/query.js"></script>
+
+{% else %}
+
 <script src="{{ static_prefix }}/loading-spinner/loading-spinner.js"></script>
 <script src="{{ static_prefix }}/vue/vueui.js"></script>
+
+{% endif %}
 
 {% include 'vue_loc.html' %}
 
@@ -17,8 +27,17 @@
 
 {% block body %}
 
-<div id="app" style="width: 100%; height: 100%"></div>
+{% if "filter=" in env['QUERY_STRING'] or "matchType=" in env['QUERY_STRING'] %}
 
+<div class="container-fluid">
+    <div class="row justify-content-center">
+        <h4 class="display-4 text-center text-sm-left p-0">{{ _('Search Results') }}</h4>
+    </div>
+</div>
+<div class="container">
+    <div class="row justify-content-center text-center text-sm-left mt-1" id="display-query-type-info"></div>
+</div>
+<div class="container mt-3 q-display" id="captures"></div>
 <script>
   var text = {
       months: {
@@ -52,9 +71,19 @@
       },
     };
 
+  var renderCal = new RenderCalendar({ prefix: "{{ prefix }}", staticPrefix: "{{ static_prefix }}", text: text });
+  renderCal.init();
+</script>
+
+{% else %}
+
+<div id="app" style="width: 100%; height: 100%"></div>
+
+<script>
   VueUI.main("{{ static_prefix }}", "{{ url }}", "{{ prefix }}", undefined, "{{ ui.logo }}", "{{ ui.navbar_background_hex | default('f8f9fa') }}", "{{ ui.navbar_color_hex | default('212529') }}", "{{ ui.navbar_light_buttons }}", "{{ env.pywb_lang | default('en') }}",
       allLocales, i18nStrings);
-
 </script>
+
+{% endif %}
 
 {% endblock %}
